write readme.md

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-copy": "node script/build-copy.js",
     "build-pack": "node script/build-pack",
     "test": "npm run build-pack && karma start script/karma.conf.js",
-    "publish": "npm run test"
+    "prePublish": "npm run test"
   },
   "repository": {
     "type": "git",
